<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TextView</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="email_address_es_">Email address(es):</string>
    <string name="enter_email">Enter email</string>
    <string name="person_s_name">Person\'s name</string>
    <string name="name">Name</string>
    <string name="stupid_things_that_this_person_does">Stupid Things that this Person does</string>
    <string name="what_you_want_to_do_to_this_person_">What you want to do to this person:</string>
    <string name="hateful_outro">Hateful Outro</string>
    <string name="send_email">Send Email</string>

</resources>
